--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A library for managing complex chains of asynchronous operations in Javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "karma start karma/karma-unit-sauce.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,9 @@
   "bugs": {
     "url": "https://github.com/mtford90/operations.js/issues"
   },
+  "engines": [
+    "node"
+  ],
   "homepage": "https://github.com/mtford90/operations.js",
   "devDependencies": {
     "grunt": "~0.4.5",
@@ -48,7 +51,14 @@
     "browserify": "~5.11.0",
     "grunt-browserify": "~3.0.0",
     "grunt-string-replace": "~0.2.7",
-    "grunt-text-replace": "~0.3.12"
+    "grunt-text-replace": "~0.3.12",
+    "karma-sauce-launcher": "~0.2.10",
+    "grunt-npm": "0.0.2",
+    "sauce-connect-launcher": "~0.6.1",
+    "saucelabs": "~0.1.1",
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-saucelabs": "~8.3.1",
+    "jquery": "~2.1.1"
   },
   "dependencies": {
     "underscore": "~1.7.0"
