--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "operations.js",
+  "name": "operations",
   "version": "0.1.0",
   "homepage": "https://github.com/mtford90/operations.js",
   "authors": [
