--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "operations",
-  "version": "0.1.0",
+  "version": "0.1.0b",
   "description": "A library for managing complex chains of asynchronous operations in Javascript.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "grunt test"
   },
