--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dist"]
 	path = dist
-	url = git@github.com:mtford90/operations.js-bower.git
+	url = https://github.com/mtford90/operations.js-bower.git 
